<resources>
    <string name="abc_action_bar_home_description">Navigate home</string>
    <string name="abc_action_bar_home_description_format">%1$s, %2$s</string>
    <string name="abc_action_bar_home_subtitle_description_format">%1$s, %2$s, %3$s</string>
    <string name="abc_action_bar_up_description">Navigate up</string>
    <string name="abc_action_menu_overflow_description">More options</string>
    <string name="abc_action_mode_done">Done</string>
    <string name="abc_activity_chooser_view_see_all">See all</string>
    <string name="abc_activitychooserview_choose_application">Choose an app</string>
    <string name="abc_capital_off">OFF</string>
    <string name="abc_capital_on">ON</string>
    <string name="abc_search_hint">Search…</string>
    <string name="abc_searchview_description_clear">Clear query</string>
    <string name="abc_searchview_description_query">Search query</string>
    <string name="abc_searchview_description_search">Search</string>
    <string name="abc_searchview_description_submit">Submit query</string>
    <string name="abc_searchview_description_voice">Voice search</string>
    <string name="abc_shareactionprovider_share_with">Share with</string>
    <string name="abc_shareactionprovider_share_with_application">Share with %s</string>
    <string name="abc_toolbar_collapse_description">Collapse</string>
    <string name="com_facebook_image_download_unknown_error">Unexpected error while downloading an image.</string>
    <string name="com_facebook_internet_permission_error_message">WebView login requires INTERNET permission</string>
    <string name="com_facebook_internet_permission_error_title">AndroidManifest Error</string>
    <string name="com_facebook_like_button_liked">Liked</string>
    <string name="com_facebook_like_button_not_liked">Like</string>
    <string name="com_facebook_loading">Loading...</string>
    <string name="com_facebook_loginview_cancel_action">Cancel</string>
    <string name="com_facebook_loginview_log_in_button">Log in</string>
    <string name="com_facebook_loginview_log_in_button_long">Log in with Facebook</string>
    <string name="com_facebook_loginview_log_out_action">Log out</string>
    <string name="com_facebook_loginview_log_out_button">Log out</string>
    <string name="com_facebook_loginview_logged_in_as">Logged in as: %1$s</string>
    <string name="com_facebook_loginview_logged_in_using_facebook">Logged in using Facebook</string>
    <string name="com_facebook_send_button_text">Send</string>
    <string name="com_facebook_share_button_text">Share</string>
    <string name="com_facebook_tooltip_default">"New! You're in control - choose what info you want to share with apps."</string>
    <string name="common_google_play_services_api_unavailable_text">%1$s requires one or more Google Play services that are not currently available. Please contact the developer for assistance.</string>
    <string name="common_google_play_services_enable_button">Enable Google Play services</string>
    <string name="common_google_play_services_enable_text">"%1$s won't work unless you enable Google Play services."</string>
    <string name="common_google_play_services_enable_title">Enable Google Play services</string>
    <string name="common_google_play_services_install_button">Get Google Play services</string>
    <string name="common_google_play_services_install_text_phone">"%1$s won't run without Google Play services, which are missing from your phone."</string>
    <string name="common_google_play_services_install_text_tablet">"%1$s won't run without Google Play services, which are missing from your tablet."</string>
    <string name="common_google_play_services_install_title">Get Google Play services</string>
    <string name="common_google_play_services_invalid_account_text">The specified account does not exist on this device. Please choose a different account.</string>
    <string name="common_google_play_services_invalid_account_title">Invalid Account</string>
    <string name="common_google_play_services_network_error_text">A data connection is required to connect to Google Play services.</string>
    <string name="common_google_play_services_network_error_title">Network Error</string>
    <string name="common_google_play_services_notification_ticker">Google Play services error</string>
    <string name="common_google_play_services_resolution_required_text">Please complete action required by %1$s.</string>
    <string name="common_google_play_services_resolution_required_title">Google Play services requires an action</string>
    <string name="common_google_play_services_restricted_profile_text">Accessing accounts from a restricted profile is not supported.</string>
    <string name="common_google_play_services_restricted_profile_title">Restricted Profile</string>
    <string name="common_google_play_services_sign_in_failed_text">Error signing in the specified account. Please choose a different account.</string>
    <string name="common_google_play_services_sign_in_failed_title">Sign in failed</string>
    <string name="common_google_play_services_unknown_issue">%1$s is having trouble with Google Play services. If the problem persists, please contact the developer for assistance.</string>
    <string name="common_google_play_services_unsupported_text">%1$s relies on Google Play services, which is not supported by your device. Contact the manufacturer for assistance.</string>
    <string name="common_google_play_services_unsupported_title">Google Play services</string>
    <string name="common_google_play_services_update_button">Update</string>
    <string name="common_google_play_services_update_text">"%1$s won't run unless you update Google Play services."</string>
    <string name="common_google_play_services_update_title">Update Google Play services</string>
    <string name="common_google_play_services_updating_text">"%1$s won't run without Google Play services, which are currently updating."</string>
    <string name="common_google_play_services_updating_title">Google Play services are updating</string>
    <string name="common_google_play_services_wear_update_text">New version of Google Play services needed. It will update itself shortly.</string>
    <string name="common_open_on_phone">Open on phone</string>
    <string name="common_signin_button_text">Sign in</string>
    <string name="common_signin_button_text_long">Sign in with Google</string>
    <string name="joda_time_android_date_time">%1$s, %2$s</string>
    <string name="joda_time_android_preposition_for_date">on %s</string>
    <string name="joda_time_android_preposition_for_time">at %s</string>
    <string name="joda_time_android_relative_time">%1$s, %2$s</string>
    <string name="messenger_send_button_text">Send</string>
    <string name="place_autocomplete_clear_button">Clear search</string>
    <string name="place_autocomplete_search_hint">Search</string>
    <string name="status_bar_notification_info_overflow">999+</string>
    <string name="dgts__call_me">Call me</string>
    <string name="dgts__calling">Calling…</string>
    <string name="dgts__confirmation_code">Confirmation code</string>
    <string name="dgts__confirmation_edit_hint">Enter the 6-digit code we sent you</string>
    <string name="dgts__confirmation_error">Unable to confirm your phone number</string>
    <string name="dgts__confirmation_error_alternative">Sorry, we are having trouble sending you a confirmation code.</string>
    <string name="dgts__confirmation_expired">This code has expired. Please resend confirmation code.</string>
    <string name="dgts__continue">Continue</string>
    <string name="dgts__create_account">Create account</string>
    <string name="dgts__digits_logo_desc">digits logo icon</string>
    <string name="dgts__digits_logo_name_desc">digits logo name</string>
    <string name="dgts__dismiss">Dismiss</string>
    <string name="dgts__done">Done</string>
    <string name="dgts__email_request_edit_hint">Email address</string>
    <string name="dgts__email_request_title">Enter email address</string>
    <string name="dgts__find_your_friends">Find your friends</string>
    <string name="dgts__image_header_description">Image header for login</string>
    <string name="dgts__invalid_email">Invalid Email. Try Again</string>
    <string name="dgts__login_digits_text">Use my phone number</string>
    <string name="dgts__network_error">Please check your network and try again.</string>
    <string name="dgts__not_now">Not now</string>
    <string name="dgts__okay">Okay</string>
    <string name="dgts__phone_number_edit_hint">Your Number</string>
    <string name="dgts__phone_number_text">Enter your phone number</string>
    <string name="dgts__pin_code_verification_title">Enter 2-step verification code</string>
    <string name="dgts__resend_confirmation_button_code">Resend code</string>
    <string name="dgts__resend_confirmation_text">Resend confirmation code</string>
    <string name="dgts__send_confirmation_code">Send confirmation code</string>
    <string name="dgts__sending">Sending…</string>
    <string name="dgts__success_desc">Success Icon</string>
    <string name="dgts__terms_email_request">By tapping %1$sContinue%1$s above, you are adding this email to your Digits account. You agree that this app and %7$sall apps listed in your Digits account%5$s can access this email address and their users can discover you by email.</string>
    <string name="dgts__terms_text">By tapping %1$sSend confirmation code%1$s above, %6$sDigits by Twitter%5$s will send you an SMS to confirm your phone number. On the next screen, you can choose “Resend code” to receive a new SMS or “Call me” to initiate a phone call to confirm your phone number. Message, call &amp; data rates may apply.</string>
    <string name="dgts__terms_text_call_me">By tapping %1$sCall me%1$s above, %6$sDigits by Twitter%5$s will send you a voice call to confirm your phone number. Call &amp; data rates may apply.</string>
    <string name="dgts__terms_text_create">By tapping %1$sCreate account%1$s above, you agree to the %8$sTerms of Service%5$s, %9$sPrivacy Policy%5$s, and %10$sCookies Use%5$s of %6$sDigits by Twitter%5$s, to share your phone number with %4$s, and that other users of %4$s can discover you by phone number.</string>
    <string name="dgts__terms_text_sign_in">By tapping %1$sContinue%1$s above, your %7$sDigits phone number and/or email address%5$s will be shared with %4$s and other users of %4$s can discover you by phone number and/or email.</string>
    <string name="dgts__terms_text_updated">By tapping %1$sContinue%1$s above, you agree to the %8$sTerms of Service%5$s, %9$sPrivacy Policy%5$s, and %10$sCookies Use%5$s of %6$sDigits by Twitter%5$s, to share your %7$sDigits phone number and/or email address%5$s with %4$s, and other users of %4$s can discover you by phone number and/or email.</string>
    <string name="dgts__try_again">Try Again</string>
    <string name="dgts__try_again_confirmation">Please check your code and try again.</string>
    <string name="hms_picker_hours_label">H</string>
    <string name="hms_picker_minutes_label">M</string>
    <string name="hms_picker_seconds_label">S</string>
    <string name="number_delete">Delete</string>
    <string name="number_picker_minus_label">—</string>
    <string name="number_picker_seperator">.</string>
    <string name="timer_delete">Delete</string>
    <string name="back">Back</string>
    <string name="cancellation_reason_title">Tell us why</string>
    <string name="cb_payu_icon">PayU icon</string>
    <string name="cb_please_wait">Please Wait</string>
    <string name="cb_process_request">Processing Your Request</string>
    <string name="reason1">Driver is late</string>
    <string name="reason2">Changed my mind</string>
    <string name="reason3">Booked another cab</string>
    <string name="reason4">Driver denied duty</string>
    <string name="submit">Submit</string>
</resources>