<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout android:layout_width="fill_parent" android:layout_height="fill_parent"
  xmlns:android="http://schemas.android.com/apk/res/android">
    <LinearLayout android:gravity="center_horizontal" android:orientation="vertical" android:background="@drawable/shape_progress" android:paddingTop="30.0dip" android:paddingBottom="30.0dip" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginLeft="30.0dip" android:layout_marginRight="30.0dip" android:layout_centerInParent="true">
        <ImageView android:id="@id/imageView" android:paddingTop="10.0dip" android:layout_width="wrap_content" android:layout_height="wrap_content" android:src="@drawable/l_icon1" android:scaleType="centerInside" android:contentDescription="@string/cb_payu_icon" />
        <TextView android:textSize="20.0dip" android:textStyle="normal" android:layout_gravity="center_horizontal" android:id="@id/dialog_title" android:paddingTop="30.0dip" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/cb_process_request" />
        <TextView android:textSize="15.0dip" android:textStyle="italic" android:id="@id/dialog_desc" android:paddingTop="10.0dip" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/cb_please_wait" />
    </LinearLayout>
</RelativeLayout>