<?xml version="1.0" encoding="utf-8"?>
<LinearLayout android:orientation="vertical" android:layout_width="fill_parent" android:layout_height="fill_parent"
  xmlns:android="http://schemas.android.com/apk/res/android">
    <LinearLayout android:gravity="center" android:layout_width="fill_parent" android:layout_height="wrap_content">
        <com.codetroopers.betterpickers.hmspicker.HmsView android:gravity="top" android:layout_gravity="center" android:id="@id/hms_text" android:paddingLeft="@dimen/timer_padding_left" android:paddingTop="@dimen/medium_font_padding" android:paddingBottom="@dimen/medium_font_padding" android:layout_width="0.0dip" android:layout_height="wrap_content" android:baselineAligned="false" android:layout_weight="2.0">
            <com.codetroopers.betterpickers.widget.ZeroTopPaddingTextView android:ellipsize="none" android:id="@id/hours_ones" android:layout_width="wrap_content" android:layout_height="wrap_content" android:singleLine="true" style="@style/medium_bold_hms" />
            <com.codetroopers.betterpickers.widget.ZeroTopPaddingTextView android:ellipsize="none" android:gravity="top" android:id="@id/hours_label" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/hms_picker_hours_label" android:singleLine="true" style="@style/label" />
            <com.codetroopers.betterpickers.widget.ZeroTopPaddingTextView android:ellipsize="none" android:id="@id/minutes_tens" android:layout_width="wrap_content" android:layout_height="wrap_content" android:singleLine="true" style="@style/medium_bold_hms" />
            <com.codetroopers.betterpickers.widget.ZeroTopPaddingTextView android:ellipsize="none" android:id="@id/minutes_ones" android:layout_width="wrap_content" android:layout_height="wrap_content" android:singleLine="true" style="@style/medium_bold_hms" />
            <com.codetroopers.betterpickers.widget.ZeroTopPaddingTextView android:ellipsize="none" android:gravity="top" android:id="@id/minutes_label" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/hms_picker_minutes_label" android:singleLine="true" style="@style/label" />
            <com.codetroopers.betterpickers.widget.ZeroTopPaddingTextView android:ellipsize="none" android:id="@id/seconds_tens" android:layout_width="wrap_content" android:layout_height="wrap_content" android:singleLine="true" style="@style/medium_light_hms" />
            <com.codetroopers.betterpickers.widget.ZeroTopPaddingTextView android:ellipsize="none" android:id="@id/seconds_ones" android:layout_width="wrap_content" android:layout_height="wrap_content" android:singleLine="true" style="@style/medium_light_hms" />
            <com.codetroopers.betterpickers.widget.ZeroTopPaddingTextView android:ellipsize="none" android:gravity="top" android:id="@id/seconds_label" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/hms_picker_seconds_label" android:singleLine="true" style="@style/label" />
        </com.codetroopers.betterpickers.hmspicker.HmsView>
        <ImageButton android:gravity="center" android:layout_gravity="center" android:id="@id/delete" android:background="@drawable/key_background_dark" android:layout_width="0.0dip" android:layout_height="fill_parent" android:src="@drawable/ic_backspace_dark" android:layout_weight="1.0" android:contentDescription="@string/timer_delete" />
    </LinearLayout>
    <View android:id="@id/divider" android:background="@color/default_divider_color_dark" android:layout_width="fill_parent" android:layout_height="1.0dip" />
    <include android:id="@id/first" layout="@layout/three_keys_view" />
    <include android:id="@id/second" layout="@layout/three_keys_view" />
    <include android:id="@id/third" layout="@layout/three_keys_view" />
    <include android:id="@id/fourth" layout="@layout/three_keys_view" />
</LinearLayout>